--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios  --simulator='iPhone 12 Pro Max'",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/checkbox": "^0.5.16",
+    "@react-native-google-signin/google-signin": "^10.1.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -24,6 +25,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-fast-image": "^8.6.3",
+    "react-native-paper": "^5.11.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
@@ -31,7 +33,6 @@
     "react-native-svg": "^13.13.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^9.1.0",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.7",
     "tsconfig-paths": "^4.2.0",
